[gd_scene load_steps=2 format=3 uid="uid://cwtf02lj5bqjc"]

[ext_resource type="Script" uid="uid://bvp2lv3xi2bc1" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -278.0
offset_right = 224.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME
"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS
"

[node name="Quit to Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT TO MAIN MENU"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit to Main Menu" to="." method="_on_quit_to_main_menu_pressed"]
